--- a/css/scss/_images.scss
+++ b/css/scss/_images.scss
@@ -256,5 +256,5 @@ body:after {
   margin-top: 10px;
   margin-bottom:10px;  
   border: 4px solid #fff;
-
+  max-width: 80%;
 }
